...
                                GameZoneExpiredCardView(gameCardModel: gameModel)
                            case .none:
                                EmptyView()
                            }
                        }
                    }
					.accessibilityIdentifier("game_grid")
                    .padding(.vertical, 24)
					.padding(.horizontal, 16)
                } else {
                    EmptyStateView(title: "No Games yet")
                }
            }
...
