...
		static let receiptNumberLabel = "receipt_number_label"
		static let storeLabel = "store_label"
		static let receiptDate = "receipt_date"
		static let tryAgainButtonProcessedReceipt = "try_again_processed_receipt"
		static let receiptSubmittedCongrats = "receipt_submitted_congrats"
		static let scanAnotherReceipt = "scan_another_receipt"
		static let receiptNumberText = "receipt_number_text"
		static let receiptDateText = "receipt_date_text"
		static let receiptAmountText = "receipt_amount_text"
		static let receiptPointsText = "receipt_points_text"
        static let receiptManualReviewText = "receipt_manual_review_text"
		static let closeButton = "close_button"
		static let submitForManualReviewButton = "submit_for_manual_review_button"
		static let backButton = "back_button_in_manual_review"
...
    enum GameZone {
        static let header = "game_zone_header"
    }
    
    enum Referrals {
        static let referralsViewTitle = "referrals_title"
        static let referAFriendTitle = "refer_friend_title"
        static let email = "friend_email"
        static let referralCode = "referral_code"
        static let joinAndReferButton = "join_refer_button"
        static let emailErrorBackButton = "email_error_back_button"
        static let joinErrorBackButton = "join_error_back_button"
    }
}

